fix overflow in firefox

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -131,7 +131,7 @@ section {
 
     h4 {
       position: absolute;
-      overflow-y: hidden;
+      overflow: hidden;
       display: block;
       top: 0;
       width: 100%;
